<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AboutUs.AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="About Us"
                android:textColor="@color/borderColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/borderColor"
                android:backgroundTint="@color/borderColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/LifeSource"
                android:textColor="@color/borderColor"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="Why LifeSource?"
                android:textColor="@color/borderColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/borderColor"
                android:backgroundTint="@color/borderColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20sp"
                android:gravity="start"
                android:text="@string/WhyLifeSource"
                android:textColor="@color/borderColor"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="Vision"
                android:textColor="@color/borderColor"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/borderColor"
                android:backgroundTint="@color/borderColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20sp"
                android:gravity="start"
                android:text="@string/Vision"
                android:textColor="@color/borderColor"
                android:textSize="18sp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="Mission"
                android:textColor="@color/borderColor"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/borderColor"
                android:backgroundTint="@color/borderColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20sp"
                android:gravity="start"
                android:text="@string/Mission"
                android:textColor="@color/borderColor"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="Objectives"
                android:textColor="@color/borderColor"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/borderColor"
                android:backgroundTint="@color/borderColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20sp"
                android:gravity="start"
                android:text="@string/Objectives"
                android:textColor="@color/borderColor"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>